--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -25,7 +25,8 @@ function submitform(rating) {
 
 <% end -%>
 
-<%= link_to 'view old reviews', reviews_url -%>
+<%= link_to 'view old reviews', reviews_url -%></br>
+<%= link_to 'see recommendations', recommendations_url -%>
 
 </body>
 </html>
