calc m1 only once in calc_all case
reset command

include netflix id in ui

--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -4,8 +4,9 @@
     <%= 'no reviews yet!' if @recommendations.empty? -%> 
     <% @recommendations.each do |rec| -%>
         <tr>
-            <td><%= rec[0] -%></td>
-            <td><%= sprintf "%0.2f", rec[1] -%></td>
+            <td><%= rec[:netflix_id] -%></td>
+            <td><%= rec[:name] -%></td>
+            <td><%= sprintf "%0.2f", rec[:rating] -%></td>
         </tr>
     <% end -%>
 </table>
